fixed contents on mobile

--- a/res/style.css
+++ b/res/style.css
@@ -53,6 +53,7 @@
     top: 10%;
     padding: 20px 40px;
     position: sticky;
+    opacity: 0;
 }
 
 .contents a.major {
@@ -210,7 +211,8 @@ figcaption{
 
 @media (max-width:1000pt){
     .contents {
-        display: none;
+        top: 60px;
+        position: absolute;
     }
 }
 
